--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -9,7 +9,12 @@
     "from pymongo import MongoClient\n",
     "import numpy as np\n",
     "import cv2\n",
-    "import base64"
+    "import base64\n",
+    "\n",
+    "# client = MongoClient('mongodb://cpsweek:localdb@localhost:27018')\n",
+    "client = MongoClient('mongodb://localhost:27017')\n",
+    "\n",
+    "db = client['cps-test-01']"
    ]
   },
   {
@@ -70,25 +75,6 @@
     "except KeyboardInterrupt:\n",
     "    cam.release()\n",
     "    print (\"Stream stopped\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# client = MongoClient('mongodb://cpsweek:localdb@localhost:27018')\n",
-    "client = MongoClient('mongodb://localhost:27017')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = client['cps-test-01']"
    ]
   },
   {
@@ -189,6 +175,8 @@
     "#                          (plates[i],shelf[i],t[i])\n",
     "# print (np_data.shape) # (12, 7, 13)\n",
     "\n",
+    "# max_gondola = 6\n",
+    "# max_shelves = 7\n",
     "# plates = np.zeros((max_gondola,max_shelves))\n",
     "# for item in plate_data.find():\n",
     "#     gondola_id = item['gondola_id']\n",
