context augmentation finished

--- a/ReadData.ipynb
+++ b/ReadData.ipynb
@@ -141,7 +141,7 @@
     "    count += len(item['plate_ids'])\n",
     "#     shelf_index = item['plate_ids'][0]['shelf_id']['shelf_index']\n",
     "#     gondola_id = item['plate_ids'][0]['shelf_id']['gondola_id']['id']\n",
-    "    plates[gondola_id][shelf_index] += len(item['plate_ids'])\n",
+    "#     plates[gondola_id][shelf_index] += len(item['plate_ids'])\n",
     "    product_barcode_type = item['planogram_product_id']['barcode_type']\n",
     "    product_barcode = item['planogram_product_id']['id']\n",
     "    product = products[product_barcode]\n",
@@ -383,9 +383,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
