add product metadata array

--- a/Classifier_dataset.ipynb
+++ b/Classifier_dataset.ipynb
@@ -36,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "background_image_folder = './data/classifier/background_images'\n",
-    "product_image_folder = './data/classifier/images_18skus'\n",
-    "combined_output_folder = './data/classifier/combined'\n",
-    "video_folder = './data/cps-test-videos'"
+    "background_image_folder = 'data/classifier/background_images'\n",
+    "product_image_folder = 'data/classifier/images_18skus'\n",
+    "combined_output_folder = 'data/classifier/combined'\n",
+    "video_folder = 'data/cps-test-videos'"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "            \n",
     "    print ('number of background images', total_count)\n",
     "    \n",
-    "generate_background_images()"
+    "# generate_background_images()"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "            if not f.endswith('.png') and not f.endswith('.jpg'):\n",
     "                continue\n",
     "            count += 1\n",
-    "            if count % 10 != 0:\n",
+    "            if count % 100 != 0:\n",
     "                continue\n",
     "            product_image_path = join(in_folder, f)\n",
     "            background_image_path = bg_imgs[random.randint(0, bg_imgs_count-1)]\n",
@@ -188,6 +188,87 @@
     "# TODO: product image size too big comparing to bg?\n",
     "# TODO: boundary smoothing?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "\n",
+    "# client = MongoClient('mongodb://cpsweek:localdb@localhost:27018')\n",
+    "client = MongoClient('mongodb://localhost:27017')\n",
+    "\n",
+    "db = client['cps-test-01']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# db.products\n",
+    "class Product:\n",
+    "    def __init__(self, barcode_type, id, name, thumbnail, price, weight):\n",
+    "        self.barcode_type =barcode_type\n",
+    "        self.id = id\n",
+    "        self.name = name\n",
+    "        self.thumbnail = thumbnail\n",
+    "        self.price = price\n",
+    "        self.weight = weight\n",
+    "        self.plate_ids = None\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"%s %s %s\\t%f %f %s %s\" % (self.barcode_type, self.id, self.name, self.price, self.weight, self.plate_ids, self.thumbnail)\n",
+    "\n",
+    "products_raw = db['products']\n",
+    "products = {}\n",
+    "\n",
+    "\n",
+    "for item in products_raw.find():\n",
+    "    barcode_type = item['product_id']['barcode_type']\n",
+    "    id = item['product_id']['id']\n",
+    "    name = item['metadata']['name']\n",
+    "    thumbnail = item['metadata']['thumbnail']\n",
+    "    price = item['metadata']['price']\n",
+    "    weight = item['metadata']['weight']\n",
+    "    product = Product(barcode_type, id, name, thumbnail, price, weight)\n",
+    "    products[id] = product\n",
+    "#     print (product)\n",
+    "print ('products', len(products))\n",
+    "products[''] = Product('barcode_type', 'id', 'name', 'thumbnail', price=0, weight=0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_barcodes = ['634418523501', '024100114238', '070462098617', '034000996629', '835144008984', '084114032607', '634418523488', '078907420108', '026200471594', '872181000069', '041419420058', '835144009066', '042238323643', '040000513056', '041364087320', '084114033338', '022000135377', '079200168490']\n",
+    "product_thumbnails = []\n",
+    "product_names = []\n",
+    "from IPython.display import Image, display\n",
+    "# from IPython.core.display import HTML \n",
+    "\n",
+    "\n",
+    "for product_barcode in product_barcodes:\n",
+    "    product_names.append(products[product_barcode].name)\n",
+    "    product_thumbnails.append(products[product_barcode].thumbnail)\n",
+    "    print (product_barcode, products[product_barcode].name)\n",
+    "    display(Image(url= products[product_barcode].thumbnail, width=200, height=100))\n",
+    "print(product_names)\n",
+    "print (product_thumbnails)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
