opencv draw contour around products

--- a/Classifier_dataset.ipynb
+++ b/Classifier_dataset.ipynb
@@ -36,6 +36,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision.transforms as transforms\n",
+    "from matplotlib.pyplot import imshow\n",
+    "from PIL import Image\n",
+    "import IPython\n",
+    "def cv2_imshow(img):\n",
+    "    img = img[:,:,[2,1,0]]\n",
+    "    img = Image.fromarray(img)\n",
+    "    plt.figure(figsize=(20, 20))\n",
+    "    plt.imshow(img)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = '/home/ubuntu/git-clones/AutoCheckout-CMU-F4'\n",
     "background_image_folder = 'data/classifier/background_images'\n",
     "product_image_folder = 'data/classifier/images_18skus'\n",
     "combined_output_folder = 'data/classifier/combined'\n",
@@ -53,6 +74,7 @@
     "        shutil.rmtree(background_image_folder)\n",
     "    os.makedirs(background_image_folder)\n",
     "    total_count = 0\n",
+    "    frame_shape = None\n",
     "    for video_name in listdir(video_folder):\n",
     "        video_path = join(video_folder, video_name)\n",
     "        capture = cv2.VideoCapture(video_path)\n",
@@ -61,15 +83,84 @@
     "            ret, frame_img = capture.read()\n",
     "            if frame_img is None:\n",
     "                break\n",
+    "            frame_shape = frame_img.shape\n",
     "            if idx % 6 == 5:\n",
     "                output_name = join(background_image_folder, video_name + '_' + str(idx) + '.jpg')\n",
     "                cv2.imwrite(output_name,frame_img)\n",
     "                total_count +=1\n",
     "            idx+=1\n",
     "            \n",
-    "    print ('number of background images', total_count)\n",
-    "    \n",
+    "    print ('number of background images', total_count, frame_shape)\n",
+    "    return total_count\n",
     "# generate_background_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_white_bg_img():\n",
+    "    img = np.zeros([720,1280,3],dtype=np.uint8)\n",
+    "    img.fill(255)\n",
+    "    return img\n",
+    "\n",
+    "def test_crop_backpixels_from_product():\n",
+    "    product_image_path=\"data/classifier/images_18skus/835144008984/img_10605.png\"\n",
+    "    pdt = cv2.imread(product_image_path)\n",
+    "    \n",
+    "    mask = np.logical_and(pdt[:,:,0]>0, pdt[:,:,1]>0, pdt[:,:,2]>0)\n",
+    "    mask = np.dstack([mask]*3)\n",
+    "    bg = generate_white_bg_img()\n",
+    "    (pdt_y, pdt_x, _) = pdt.shape\n",
+    "    (bg_y, bg_x, _) = bg.shape\n",
+    "\n",
+    "    combined = bg\n",
+    "    x_offset = random.randint(0,bg_x - pdt_x)\n",
+    "    y_offset = random.randint(0,bg_y - pdt_y)\n",
+    "    bg_cropped = combined[y_offset:y_offset+pdt_y, x_offset:x_offset+pdt_x]\n",
+    "\n",
+    "    np.putmask(bg_cropped, mask, pdt)\n",
+    "    combined[y_offset:y_offset+pdt_y, x_offset:x_offset+pdt_x] = bg_cropped\n",
+    "    cv2_imshow(combined)\n",
+    "\n",
+    "def test_crop_contour_from_product():\n",
+    "    product_image_path=\"data/classifier/images_18skus/835144008984/img_10605.png\"\n",
+    "    img = cv2.imread(product_image_path)\n",
+    "#     cv2_imshow(img)\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "#     print (imgray.shape)\n",
+    "#     ret, thresh = cv2.threshold(imgray, 0, 255, cv2.THRESH_BINARY)\n",
+    "#     print (thresh.shape)\n",
+    "#     plt.imshow(thresh, cmap=\"gray\")\n",
+    "#     plt.show()\n",
+    "    \n",
+    "\n",
+    "    contours,_ = cv2.findContours(gray, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    max_cnt = None\n",
+    "    max_area = 0\n",
+    "    for cnt in contours:\n",
+    "        area = cv2.contourArea(cnt)\n",
+    "        print (area)\n",
+    "        if (area>max_area):\n",
+    "            max_cnt = cnt\n",
+    "            max_area = area\n",
+    "        break\n",
+    "    \n",
+    "#     cv2.drawContours(img, [max_cnt], 0, (0,255,0), 3)\n",
+    "    cv2_imshow(img)\n",
+    "    hull = cv2.convexHull(max_cnt)\n",
+    "#     cv2.drawContours(img, [hull], 0, (0,255,0), 3)\n",
+    "#     cv2_imshow(img)\n",
+    "    \n",
+    "    mask = np.zeros_like(img) # Create mask where white is what we want, black otherwise\n",
+    "    cv2.drawContours(mask, [hull], 0, 255, -1) # Draw filled contour in mask\n",
+    "    out = np.zeros_like(img) # Extract out the object and place into output image\n",
+    "    out[mask == 255] = img[mask == 255]\n",
+    "    cv2_imshow(out)\n",
+    "    \n",
+    "test_crop_contour_from_product()"
    ]
   },
   {
@@ -103,6 +194,7 @@
     "    record[\"height\"] = bg_y\n",
     "    record[\"width\"] = bg_x\n",
     "\n",
+    "    # TODO: after opencv contour the box can be more precise?\n",
     "    boxes = [x_offset, y_offset, x_offset+pdt_x, y_offset+pdt_y]\n",
     "    objs = []\n",
     "    obj = {\n",
@@ -158,7 +250,7 @@
     "            product_image_path = join(in_folder, f)\n",
     "            background_image_path = bg_imgs[random.randint(0, bg_imgs_count-1)]\n",
     "            image_id = product_id + '_' + str(count)\n",
-    "            combined_output_path = join(combined_output_folder, product_id, image_id+ '.jpg')\n",
+    "            combined_output_path = join(root, combined_output_folder, product_id, image_id+ '.jpg')\n",
     "            \n",
     "            combined, record = generate_train_image(background_image_path, product_image_path, combined_output_path, product_id, category_id, image_id)\n",
     "            \n",
@@ -273,9 +365,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -287,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
