--- a/background_substraction.ipynb
+++ b/background_substraction.ipynb
@@ -99,9 +99,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
