--- a/Detectron-Mengmeng.ipynb
+++ b/Detectron-Mengmeng.ipynb
@@ -64,11 +64,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision.transforms as transforms\n",
+    "from matplotlib.pyplot import imshow\n",
+    "from PIL import Image\n",
+    "import IPython\n",
+    "def cv2_imshow(img):\n",
+    "    img = img[:,:,[2,1,0]]\n",
+    "    img = Image.fromarray(img)\n",
+    "    plt.figure(figsize=(20, 20))\n",
+    "    plt.imshow(img)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# setup model\n",
     "cfg = get_cfg()\n",
     "# add project-specific config (e.g., TensorMask) here if you're not running a model in detectron2's core library\n",
     "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\"))\n",
-    "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.5  # set threshold for this model\n",
+    "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.01  # set threshold for this model\n",
     "# Find a model from detectron2's model zoo. You can use the https://dl.fbaipublicfiles... url as well\n",
     "cfg.MODEL.WEIGHTS = model_zoo.get_checkpoint_url(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\")\n",
     "predictor = DefaultPredictor(cfg)"
@@ -88,14 +108,8 @@
    "outputs": [],
    "source": [
     "# !wget http://images.cocodataset.org/val2017/000000439715.jpg -O data/test.jpg\n",
-    "im = cv2.imread(\"/home/ubuntu/git-clones/AutoCheckout-CMU-F4/data/cps-test-videos/192.168.1.100_2020-01-28_22-24-06/frame0.jpg\")\n",
-    "# mengmeng: wrong color https://www.pyimagesearch.com/2014/11/03/display-matplotlib-rgb-image/\n",
-    "# plt.imshow(im)\n",
-    "# plt.show()\n",
-    "\n",
-    "im = cv2.cvtColor(im, cv2.COLOR_BGR2RGB)\n",
-    "plt.imshow(im)\n",
-    "plt.show()"
+    "im = cv2.imread(\"/home/ubuntu/git-clones/AutoCheckout-CMU-F4/data/classifier/background_images/192.168.1.101_2020-01-28_22-24-06.mp4_365.jpg\")\n",
+    "cv2_imshow(im)"
    ]
   },
   {
@@ -113,7 +127,7 @@
    "source": [
     "# look at the outputs. See https://detectron2.readthedocs.io/tutorials/models.html#model-output-format for specification\n",
     "outputs = predictor(im)\n",
-    "# outputs[\"instances\"].pred_classes\n",
+    "print (outputs[\"instances\"].pred_classes)\n",
     "# outputs[\"instances\"].pred_boxes\n",
     "\n",
     "# We can use `Visualizer` to draw the predictions on the image.\n",
