--- a/Autocheckout_fasterRCNN_aws.ipynb
+++ b/Autocheckout_fasterRCNN_aws.ipynb
@@ -197,10 +197,10 @@
     "cfg.OUTPUT_DIR = detectron_output_dir\n",
     "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml\"))\n",
     "cfg.DATASETS.TRAIN = (\"my_dataset\",)\n",
-    "cfg.DATASETS.TEST = ()\n",
+    "# cfg.DATASETS.TEST = ()\n",
     "cfg.DATALOADER.NUM_WORKERS = 0\n",
     "cfg.MODEL.WEIGHTS = \"detectron2://COCO-Detection/faster_rcnn_R_50_FPN_3x/137849458/model_final_280758.pkl\"  # Let training initialize from model zoo\n",
-    "cfg.SOLVER.CHECKPOINT_PERIOD = 1000 # checkpoint every 10min\n",
+    "cfg.SOLVER.CHECKPOINT_PERIOD = 5000 # checkpoint every 10min\n",
     "cfg.SOLVER.IMS_PER_BATCH = 2\n",
     "cfg.SOLVER.BASE_LR = 0.02  # pick a good LR\n",
     "cfg.SOLVER.MAX_ITER = 100    # 300 iterations seems good enough for this toy dataset; you may need to train longer for a practical dataset\n",
@@ -211,7 +211,7 @@
     "trainer = DefaultTrainer(cfg) \n",
     "trainer.resume_or_load(resume=True)\n",
     "trainer.train()\n",
-    "#It will train about 20 minutes in colab."
+    "#It will train about 30 minutes for 4000 iterations in AWS."
    ]
   },
   {
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "cfg.MODEL.WEIGHTS = os.path.join(cfg.OUTPUT_DIR, \"model_final.pth\")\n",
-    "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.1   # set the testing threshold for this model\n",
+    "cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = 0.0001  # set the testing threshold for this model\n",
     "cfg.DATASETS.TEST = (\"my_dataset\", )\n",
     "predictor = DefaultPredictor(cfg)"
    ]
@@ -274,16 +274,45 @@
    },
    "outputs": [],
    "source": [
-    "product_barcodes = ['634418523501', '024100114238', '070462098617', '034000996629', '835144008984', '084114032607', '634418523488', '078907420108', '026200471594', '872181000069', '041419420058', '835144009066', '042238323643', '040000513056', '041364087320', '084114033338', '022000135377', '079200168490']\n",
-    "product_names = ['Albanese, Mini Gummi Worms', 'CheezIt Double Cheese', 'Sour Patch Kids Peg', 'Hershey Kit Kat Mini Pouch', 'Peach Rings', 'Kettle Krinkle Cut Salt and Fresh Ground Pepper Potato Chips', 'Albanese, 12 Flavor Gummi Bears', 'El Sabroso Blazing Hot Cheetos', 'Andy Capps Hot Fry Bag', 'Milk Choclate Pretzel', 'Baked Snacks Pretzel', 'Chili Mango', 'Happy-cola Gummi Candy', \"M&M's Candy Peanut\", 'Bites Candy', 'Kettle Chips Sea Salt & Vinegar', 'Starburst, Minis FaveREDS Unwrapped Fruit Chews Candy', 'SweeTarts Rope Bites']\n",
-    "product_thumbnails = ['https://cdn.shopify.com/s/files/1/0083/0704/8545/products/12-flavor-mini-gummi-worms_22_faadbaa5-4448-483d-9fc5-0eabfaab3e36_128x.jpg?v=1565210205', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_img-6831670_snapd-double-cheddar_128x.png?v=1565210227', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/tmg-article_tall.jpg?v=1565210313', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_10331_969_medium_b9a6fc1d-8ca9-4c83-9ade-ffcc8f52ec9a_128x.jpg?v=1565210297', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/gummy-peach-rings_128x.jpg?v=1565210404', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/GUEST_fb4c6822-b3f3-4a5e-b518-c43fb838a061_128x.jpg?v=1565210320', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71xDYoGWf4L._SL1500_8e3d4a2d-4cf4-4b07-bd87-d51da0145f7d_128x.jpg?v=1565210203', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/243090-1_3be6caea-96bc-4bcb-aa2d-b873a3648e94_128x.png?v=1565210263', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71peyTy8EtL._SY679_44871093-2397-4195-8116-d4f1e5e8831f_128x.jpg?v=1565210210', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81uaUnvcPBL._SY355_f393d9c4-b77b-4129-b201-4a5a17aadcdc_128x.jpg?v=1565210272', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/P1000628_128x.jpg?v=1565210246', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/IMG_3706_d49c9fde-6362-4f24-9115-5fc29a552d9f_128x.jpg?v=1565210398', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/91ljaN-fLwL._SY450_753391e5-5392-4878-9ef6-2ed1d4be95d3_128x.jpg?v=1565210288', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_17842684915_19ee4535-50bd-4c5a-9094-9c22ebc61263_128x.jpg?v=1565210330', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/450_25b69ae3-e0e6-403f-b1c8-211c154257ef_128x.jpg?v=1565210414', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/0084114108142_a1c1_0600_f6c7c0b7-9e56-4831-b0aa-d30347afef57_128x.png?v=1565210322', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71-wnSPKeJL._SL1200_4155c1f2-b688-4706-afd2-fe88d0ebf6ed.jpg?v=1565210411', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81q81-uD8eL._SY679_12162139-8b05-41ac-9c5b-00e65985824d_128x.jpg?v=1565210342']\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "# client = MongoClient('mongodb://cpsweek:localdb@localhost:27018')\n",
+    "client = MongoClient('mongodb://localhost:27017')\n",
+    "\n",
+    "db = client['cps-test-01']\n",
+    "\n",
+    "# db.products\n",
+    "class Product:\n",
+    "    def __init__(self, barcode_type, id, name, thumbnail, price, weight):\n",
+    "        self.barcode_type =barcode_type\n",
+    "        self.id = id\n",
+    "        self.name = name\n",
+    "        self.thumbnail = thumbnail\n",
+    "        self.price = price\n",
+    "        self.weight = weight\n",
+    "        self.plate_ids = None\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"%s %s %s\\t%f %f %s %s\" % (self.barcode_type, self.id, self.name, self.price, self.weight, self.plate_ids, self.thumbnail)\n",
+    "\n",
+    "products_raw = db['products']\n",
     "products = {}\n",
-    "for i in range(18):\n",
-    "  products[product_barcodes[i]] = {\n",
-    "      'name': product_names[i],\n",
-    "      'barcode': product_barcodes[i],\n",
-    "      'thumbnail': product_thumbnails[i]\n",
-    "  }"
+    "\n",
+    "\n",
+    "for item in products_raw.find():\n",
+    "    barcode_type = item['product_id']['barcode_type']\n",
+    "    id = item['product_id']['id']\n",
+    "    name = item['metadata']['name']\n",
+    "    thumbnail = item['metadata']['thumbnail']\n",
+    "    price = item['metadata']['price']\n",
+    "    weight = item['metadata']['weight']\n",
+    "    product = Product(barcode_type, id, name, thumbnail, price, weight)\n",
+    "    products[id] = product\n",
+    "#     print (product)\n",
+    "print ('products', len(products))\n",
+    "products[''] = Product('barcode_type', 'id', 'name', 'thumbnail', price=0, weight=0) \n",
+    "my_metadata = MetadataCatalog.get(\"my_dataset\")\n",
+    "product_barcodes = my_metadata.thing_classes"
    ]
   },
   {
@@ -296,8 +325,13 @@
    },
    "outputs": [],
    "source": [
-    "for d in random.sample(my_dataset, 3):\n",
-    "    im = cv2.imread(d[\"file_name\"])\n",
+    "images = ['data/others/m&m crop.png','data/others/m&m.png']\n",
+    "# for d in random.sample(my_dataset, 3):\n",
+    "#     im = cv2.imread(d[\"file_name\"])\n",
+    "\n",
+    "for image in images:\n",
+    "    im = cv2.imread(image)\n",
+    "#     cv2_imshow(im)\n",
     "    outputs = predictor(im)\n",
     "    # print (outputs)\n",
     "    v = Visualizer(im,\n",
@@ -306,12 +340,16 @@
     "                   instance_mode =  ColorMode.IMAGE\n",
     "        )\n",
     "                   # remove the colors of unsegmented pixels\n",
+    "    print (outputs['instances'].scores[:5])\n",
     "    for i in range(len(outputs['instances'].pred_classes)):\n",
-    "      pred_barcode = product_barcodes[outputs['instances'].pred_classes[i]]\n",
-    "      score = outputs['instances'].scores[i]\n",
-    "      pred_product = products[pred_barcode]\n",
-    "      print(\"%.0f%% %s %s: %s\" % (100 * score.to(\"cpu\").numpy(), pred_barcode, pred_product['name'], pred_product['thumbnail']))\n",
-    "    # print(outputs[\"instances\"].pred_boxes)\n",
+    "        pred_barcode = product_barcodes[outputs['instances'].pred_classes[i]]\n",
+    "        score = outputs['instances'].scores[i]\n",
+    "        pred_product = products[pred_barcode]\n",
+    "#         print(pred_product)\n",
+    "        print(\"%.0f%% %s %s: %s\" % (100 * score.to(\"cpu\").numpy(), pred_barcode, pred_product.name, pred_product.thumbnail))\n",
+    "        if i>10:\n",
+    "            break\n",
+    "#         print(outputs[\"instances\"].pred_boxes)\n",
     "\n",
     "    v = v.draw_instance_predictions(outputs[\"instances\"].to(\"cpu\"))\n",
     "    cv2_imshow(v.get_image())"
@@ -325,6 +363,74 @@
     "colab_type": "code",
     "id": "TNjYbtHL6lSy"
    },
+   "outputs": [],
+   "source": [
+    "import PIL.Image\n",
+    "import io\n",
+    "from IPython.display import clear_output, Image as PILIMAGE, display, HTML\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import time\n",
+    "\n",
+    "def showarray(a, fmt='jpeg'):\n",
+    "    a = np.uint8(a)\n",
+    "    a = a[:,:,[2,1,0]]\n",
+    "    f = io.BytesIO()\n",
+    "    PIL.Image.fromarray(a).save(f, fmt)\n",
+    "    display(PILIMAGE(data=f.getvalue()))\n",
+    "    \n",
+    "# cam = cv2.VideoCapture(0)\n",
+    "cam = cv2.VideoCapture('data/public-dataset/192.168.1.103_2019-11-07_02-35-15.mp4')\n",
+    "frame_count = 0\n",
+    "start_time = time.time()\n",
+    "success = True\n",
+    "# out = cv2.VideoWriter('data/cps-test-videos/video-clip-output.mp4',cv2.VideoWriter_fourcc(*'mp4v'), 10, (1280,720))\n",
+    "try:\n",
+    "    while(success):\n",
+    "        # Capture frame-by-frame\n",
+    "        success, frame = cam.read()\n",
+    "        if (frame is None):\n",
+    "            continue\n",
+    "# Convert the image from OpenCV BGR format to matplotlib RGB format\n",
+    "        # to display the image\n",
+    "#         frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "#         print(frame.shape)\n",
+    "        cv2_imshow(frame)\n",
+    "        outputs = predictor(frame)\n",
+    "        for i in range(len(outputs['instances'].pred_classes)):\n",
+    "            pred_barcode = product_barcodes[outputs['instances'].pred_classes[i]]\n",
+    "            score = outputs['instances'].scores[i]\n",
+    "            pred_product = products[pred_barcode]\n",
+    "#             print(\"%f%% %s %s: %s\" % (100*score.to(\"cpu\").numpy(), pred_barcode, pred_product.name, pred_product.thumbnail))\n",
+    "#             if (i>10):\n",
+    "#                 break\n",
+    "        \n",
+    "        # We can use `Visualizer` to draw the predictions on the image.\n",
+    "        v = Visualizer(frame[:, :, ::-1], MetadataCatalog.get(cfg.DATASETS.TRAIN[0]), scale=1.2)\n",
+    "        v = v.draw_instance_predictions(outputs[\"instances\"].to(\"cpu\"))\n",
+    "#         plt.figure(figsize = (20,10))\n",
+    "#         plt.imshow(v.get_image()[:, :, ::-1])\n",
+    "        \n",
+    "        showarray(v.get_image()[:, :, ::-1])\n",
+    "#         out.write(v.get_image()[:, :, ::-1])\n",
+    "        frame_count += 1\n",
+    "        elapsed_time = time.time() - start_time # seconds\n",
+    "        print (int(frame_count/elapsed_time), 'fps')\n",
+    "# Display the frame until new frame is available\n",
+    "#         clear_output(wait=True)\n",
+    "        break\n",
+    "        \n",
+    "        \n",
+    "except KeyboardInterrupt:\n",
+    "    cam.release()\n",
+    "#     out.release()\n",
+    "    print (\"Stream stopped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
