--- a/Classifier_dataset.ipynb
+++ b/Classifier_dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,9 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "products 393\n"
+     ]
+    }
+   ],
    "source": [
     "# db.products\n",
     "class Product:\n",
@@ -493,9 +501,360 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "634418523501 Albanese, Mini Gummi Worms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/12-flavor-mini-gummi-worms_22_faadbaa5-4448-483d-9fc5-0eabfaab3e36_128x.jpg?v=1565210205\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "024100114238 CheezIt Double Cheese\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_img-6831670_snapd-double-cheddar_128x.png?v=1565210227\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "070462098617 Sour Patch Kids Peg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/tmg-article_tall.jpg?v=1565210313\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "034000996629 Hershey Kit Kat Mini Pouch\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_10331_969_medium_b9a6fc1d-8ca9-4c83-9ade-ffcc8f52ec9a_128x.jpg?v=1565210297\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "835144008984 Peach Rings\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/gummy-peach-rings_128x.jpg?v=1565210404\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "084114032607 Kettle Krinkle Cut Salt and Fresh Ground Pepper Potato Chips\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/GUEST_fb4c6822-b3f3-4a5e-b518-c43fb838a061_128x.jpg?v=1565210320\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "634418523488 Albanese, 12 Flavor Gummi Bears\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71xDYoGWf4L._SL1500_8e3d4a2d-4cf4-4b07-bd87-d51da0145f7d_128x.jpg?v=1565210203\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "078907420108 El Sabroso Blazing Hot Cheetos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/243090-1_3be6caea-96bc-4bcb-aa2d-b873a3648e94_128x.png?v=1565210263\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "026200471594 Andy Capps Hot Fry Bag\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71peyTy8EtL._SY679_44871093-2397-4195-8116-d4f1e5e8831f_128x.jpg?v=1565210210\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "872181000069 Milk Choclate Pretzel\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81uaUnvcPBL._SY355_f393d9c4-b77b-4129-b201-4a5a17aadcdc_128x.jpg?v=1565210272\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "041419420058 Baked Snacks Pretzel\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/P1000628_128x.jpg?v=1565210246\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "835144009066 Chili Mango\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/IMG_3706_d49c9fde-6362-4f24-9115-5fc29a552d9f_128x.jpg?v=1565210398\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "042238323643 Happy-cola Gummi Candy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/91ljaN-fLwL._SY450_753391e5-5392-4878-9ef6-2ed1d4be95d3_128x.jpg?v=1565210288\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "040000513056 M&M's Candy Peanut\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_17842684915_19ee4535-50bd-4c5a-9094-9c22ebc61263_128x.jpg?v=1565210330\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "041364087320 Bites Candy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/450_25b69ae3-e0e6-403f-b1c8-211c154257ef_128x.jpg?v=1565210414\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "084114033338 Kettle Chips Sea Salt & Vinegar\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/0084114108142_a1c1_0600_f6c7c0b7-9e56-4831-b0aa-d30347afef57_128x.png?v=1565210322\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "022000135377 Starburst, Minis FaveREDS Unwrapped Fruit Chews Candy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71-wnSPKeJL._SL1200_4155c1f2-b688-4706-afd2-fe88d0ebf6ed.jpg?v=1565210411\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "079200168490 SweeTarts Rope Bites\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81q81-uD8eL._SY679_12162139-8b05-41ac-9c5b-00e65985824d_128x.jpg?v=1565210342\" width=\"200\" height=\"100\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Albanese, Mini Gummi Worms', 'CheezIt Double Cheese', 'Sour Patch Kids Peg', 'Hershey Kit Kat Mini Pouch', 'Peach Rings', 'Kettle Krinkle Cut Salt and Fresh Ground Pepper Potato Chips', 'Albanese, 12 Flavor Gummi Bears', 'El Sabroso Blazing Hot Cheetos', 'Andy Capps Hot Fry Bag', 'Milk Choclate Pretzel', 'Baked Snacks Pretzel', 'Chili Mango', 'Happy-cola Gummi Candy', \"M&M's Candy Peanut\", 'Bites Candy', 'Kettle Chips Sea Salt & Vinegar', 'Starburst, Minis FaveREDS Unwrapped Fruit Chews Candy', 'SweeTarts Rope Bites']\n",
+      "['https://cdn.shopify.com/s/files/1/0083/0704/8545/products/12-flavor-mini-gummi-worms_22_faadbaa5-4448-483d-9fc5-0eabfaab3e36_128x.jpg?v=1565210205', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_img-6831670_snapd-double-cheddar_128x.png?v=1565210227', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/tmg-article_tall.jpg?v=1565210313', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_10331_969_medium_b9a6fc1d-8ca9-4c83-9ade-ffcc8f52ec9a_128x.jpg?v=1565210297', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/gummy-peach-rings_128x.jpg?v=1565210404', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/GUEST_fb4c6822-b3f3-4a5e-b518-c43fb838a061_128x.jpg?v=1565210320', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71xDYoGWf4L._SL1500_8e3d4a2d-4cf4-4b07-bd87-d51da0145f7d_128x.jpg?v=1565210203', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/243090-1_3be6caea-96bc-4bcb-aa2d-b873a3648e94_128x.png?v=1565210263', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71peyTy8EtL._SY679_44871093-2397-4195-8116-d4f1e5e8831f_128x.jpg?v=1565210210', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81uaUnvcPBL._SY355_f393d9c4-b77b-4129-b201-4a5a17aadcdc_128x.jpg?v=1565210272', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/P1000628_128x.jpg?v=1565210246', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/IMG_3706_d49c9fde-6362-4f24-9115-5fc29a552d9f_128x.jpg?v=1565210398', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/91ljaN-fLwL._SY450_753391e5-5392-4878-9ef6-2ed1d4be95d3_128x.jpg?v=1565210288', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/prod_17842684915_19ee4535-50bd-4c5a-9094-9c22ebc61263_128x.jpg?v=1565210330', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/450_25b69ae3-e0e6-403f-b1c8-211c154257ef_128x.jpg?v=1565210414', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/0084114108142_a1c1_0600_f6c7c0b7-9e56-4831-b0aa-d30347afef57_128x.png?v=1565210322', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/71-wnSPKeJL._SL1200_4155c1f2-b688-4706-afd2-fe88d0ebf6ed.jpg?v=1565210411', 'https://cdn.shopify.com/s/files/1/0083/0704/8545/products/81q81-uD8eL._SY679_12162139-8b05-41ac-9c5b-00e65985824d_128x.jpg?v=1565210342']\n"
+     ]
+    }
+   ],
    "source": [
     "product_barcodes = ['634418523501', '024100114238', '070462098617', '034000996629', '835144008984', '084114032607', '634418523488', '078907420108', '026200471594', '872181000069', '041419420058', '835144009066', '042238323643', '040000513056', '041364087320', '084114033338', '022000135377', '079200168490']\n",
     "product_thumbnails = []\n",
